Fixed issue where 'hamburger stack' did not collapse when a navigation item was clicked.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,10 @@
 /* Bootstrap 4  */
+$enable-flex: true; // Enable Flexbox mode
 @import '~bootstrap/scss/bootstrap.scss';
+
+/* font-awesome */
+$fa-font-path: '../node_modules/font-awesome/fonts';
+@import '~font-awesome/scss/font-awesome.scss';
 
 /* Prevent Bootstrap fixed navigation from covering up the body content */
 body {
